bundle build pt1